# fastText

./: .gitignore  CMakeLists.txt  runtests.py  setup.py
alignment/: eval.py
python/fastText/pybind/: fasttext_pybind.cc
python/fastText/tests/: test_configurations.py  test_script.py
python/fastText/util/: util.py
src/: args.cc  args.h  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  main.cc  utils.h  vector.cc  vector.h
website/blog/: 2017-05-02-blog-post.md
website/static/docs/en/html/: doxygen.css  jquery.js
website/static/docs/en/html/search/: all_12.js  functions_12.js
